--- a/Rental-BuildMAchine-Service-Facade/pom.xml
+++ b/Rental-BuildMAchine-Service-Facade/pom.xml
@@ -3,30 +3,41 @@
 
     <parent>
         <artifactId>buildingMachineRentals</artifactId>
-        <groupId>cz.muni.fi.pa165.seminar02</groupId>
+        <groupId>cz.muni.fi.pa165.s02</groupId>
         <version>1.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>cz.muni.fi.pa165.seminar02</groupId>    
+    <groupId>cz.muni.fi.pa165.s02</groupId>    
     <artifactId>Rental-BuildMAchine-Service-Facade</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
   <dependencies>
 
     <dependency>
-      <groupId>cz.muni.fi.pa165.seminar02</groupId>
+      <groupId>cz.muni.fi.pa165.s02</groupId>
       <artifactId>Rental-BuildMachine-API</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
-      <groupId>cz.muni.fi.pa165.seminar02</groupId>
-      <artifactId>Rental-BuildMachine-Persistance</artifactId>
       <version>1.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>cz.muni.fi.pa165.s02</groupId>
+      <artifactId>Rental-BuildMachine-Persistance</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>4.1.2.RELEASE</version>
+      <type>jar</type>
+    </dependency>
+    
+    <dependency>
+	<groupId>net.sf.dozer</groupId>
+	<artifactId>dozer</artifactId>
+    	<version>5.5.1</version>
+    </dependency>
   </dependencies>
 
 </project>
