--- a/Rental-BuildMachine-API/pom.xml
+++ b/Rental-BuildMachine-API/pom.xml
@@ -3,14 +3,14 @@
 
     <parent>
         <artifactId>buildingMachineRentals</artifactId>
-        <groupId>cz.muni.fi.pa165.seminar02</groupId>
+        <groupId>cz.muni.fi.pa165.s02</groupId>
         <version>1.0</version>
     </parent>
 
 
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>cz.muni.fi.pa165.seminar02</groupId>
+    <groupId>cz.muni.fi.pa165.s02</groupId>
     <artifactId>Rental-BuildMachine-API</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
