--- a/Rental-BuildMachine-Persistance/pom.xml
+++ b/Rental-BuildMachine-Persistance/pom.xml
@@ -3,15 +3,15 @@
 
     <parent>
         <artifactId>buildingMachineRentals</artifactId>
-        <groupId>cz.muni.fi.pa165.seminar02</groupId>
+        <groupId>cz.muni.fi.pa165.s02</groupId>
         <version>1.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>cz.muni.fi.pa165.seminar02</groupId>
+    <groupId>cz.muni.fi.pa165.s02</groupId>
     <artifactId>Rental-BuildMachine-Persistance</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>Building machine rental persistant context</name>
