--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                          http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                           http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
      
     <groupId>cz.muni.fi.pa165.seminar02</groupId>
@@ -48,7 +46,8 @@
         <module>Rental-BuildMachine-API</module>
         <module>Rental-BuildMachine-Persistance</module>
         <module>Rental-BuildMAchine-Service-Facade</module>
-    </modules>
+    <module>FrontEndLayer</module>
+  </modules>
         
     <dependencies>
     </dependencies>    
